Fix | Menu crash on small height viewports

--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -9,7 +9,6 @@
 
 body .navigation .links {
     flex-direction: column;
-    transform: translate(-6px, -279px);
 }
 
 body .navigation .container {
